@@ -57,7 +57,7 @@
 //     public int Advice(Hand playerHand, Card dealerCard)
 //     {
         
-//         playerHand.get(0);
+//         playerHand.getFirst();
 //         playerHand.size();
 //         playerHand.get(1);
 //         /*Ace - 0
@@ -74,7 +74,7 @@
         
 //         int HandSum = playerHand.handSum(); //soma da mao do jogador
 
-//         if (playerHand.size() > 2 && (playerHand.get(0).rank == playerHand.get(1).rank))
+//         if (playerHand.size() > 2 && (playerHand.getFirst().rank == playerHand.get(1).rank))
 //         {
 //             mat = 0; //pair
 //         } 
@@ -98,7 +98,7 @@
 //         }
         
 //         if (mat == 0) {
-//             char suggest = pair[playerHand.get(0)-2][dealerCard.getValue()-2];
+//             char suggest = pair[playerHand.getFirst()-2][dealerCard.getValue()-2];
 //         } else if (mat == 2) {
 //             char suggest = soft[sum-13][dealerCard.getValue()-2];
 //         } else { //hard
